// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Artifact Modal tests inital Render 1`] = `
<div
  class="bp3-dialog selectArtifactModal ModalDialog--container"
  style="width: 880px; --ModalDialog-Height: 350px;"
>
  <header
    class="ModalDialog--header"
    data-testid="modaldialog-header"
  >
    <h3
      class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
      level="3"
    >
      pipeline.artifactTriggerConfigPanel.configureArtifactRuntimeInputs
    </h3>
  </header>
  <div
    class="ModalDialog--body"
    data-testid="modaldialog-body"
  >
    <div
      class="nopadLeft accordionSummary"
      id="Stage.undefined.Service.Manifests"
    />
  </div>
  <footer
    class="ModalDialog--footer"
    data-testid="modaldialog-footer"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          filters.apply
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          cancel
        </span>
      </button>
    </div>
  </footer>
  <button
    aria-label="Close"
    class="bp3-button Button--button StyledProps--font StyledProps--main ModalDialog--closeButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-icon"
    type="button"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="Stroke"
    >
      <svg
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 .8l6 6 6-6-12 12 6-6 6 6"
          stroke="#8F90A6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Select Artifact Modal tests on click of select button 1`] = `
<div
  class="bp3-dialog selectArtifactModal ModalDialog--container"
  style="width: 880px; --ModalDialog-Height: 350px;"
>
  <header
    class="ModalDialog--header"
    data-testid="modaldialog-header"
  >
    <h3
      class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
      level="3"
    >
      pipeline.artifactTriggerConfigPanel.selectAManifest
    </h3>
  </header>
  <div
    class="ModalDialog--body"
    data-testid="modaldialog-body"
  >
    <div
      class="TableV2--table selectArtifactTable"
    >
      <div
        class="TableV2--header"
        role="row"
      >
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 5%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="manifestName"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                MANIFESTSTEXT
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="manifestRepository"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestLocation"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.LOCATIONREPOPATH
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 13%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="manifestHasVersion"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                VERSION
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestRuntimeInputs"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.HASRUNTIMEINPUTS
              </span>
            </div>
          </p>
        </div>
      </div>
      <div
        class="TableV2--body"
      >
        <div
          class="TableV2--row TableV2--card TableV2--clickable"
          role="row"
        >
          <div
            class="TableV2--cells"
          >
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="justify-content: center;"
              >
                <div>
                  <label
                    class="bp3-label"
                  />
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="artifactLabel"
                      type="radio"
                      value="stagea: dsfds"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                  </label>
                </div>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 176px;"
                >
                  stagea: dsfds
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 159px;"
                />
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
                />
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 13%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1;"
                />
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Yes
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <footer
    class="ModalDialog--footer"
    data-testid="modaldialog-footer"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        data-name="selectBtn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          select
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          cancel
        </span>
      </button>
    </div>
  </footer>
  <button
    aria-label="Close"
    class="bp3-button Button--button StyledProps--font StyledProps--main ModalDialog--closeButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-icon"
    type="button"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="Stroke"
    >
      <svg
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 .8l6 6 6-6-12 12 6-6 6 6"
          stroke="#8F90A6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Select Artifact Modal tests when selected manifest-chart is not runtime input 1`] = `
<div
  class="bp3-dialog selectArtifactModal ModalDialog--container"
  style="width: 880px; --ModalDialog-Height: 350px;"
>
  <header
    class="ModalDialog--header"
    data-testid="modaldialog-header"
  >
    <h3
      class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
      level="3"
    >
      pipeline.artifactTriggerConfigPanel.selectAManifest
    </h3>
  </header>
  <div
    class="ModalDialog--body"
    data-testid="modaldialog-body"
  >
    <div
      class="TableV2--table selectArtifactTable"
    >
      <div
        class="TableV2--header"
        role="row"
      >
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 5%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="manifestName"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                MANIFESTSTEXT
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="manifestRepository"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestLocation"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.LOCATIONREPOPATH
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 13%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="manifestHasVersion"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                VERSION
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestRuntimeInputs"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.HASRUNTIMEINPUTS
              </span>
            </div>
          </p>
        </div>
      </div>
      <div
        class="TableV2--body"
      >
        <div
          class="TableV2--row TableV2--card TableV2--clickable"
          role="row"
        >
          <div
            class="TableV2--cells"
          >
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main disabledRow"
                style="justify-content: center;"
              >
                <div>
                  <label
                    class="bp3-label"
                  />
                  <label
                    class="bp3-control bp3-radio bp3-disabled"
                  >
                    <input
                      disabled=""
                      name="artifactLabel"
                      type="radio"
                      value="stagea: testhelmmanifest"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                  </label>
                </div>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main disabledRow"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 176px;"
                >
                  stagea: testhelmmanifest
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main disabledRow"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 159px;"
                >
                  testecr2
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal StyledProps--main disabledRow"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
                >
                  Runtime Input
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 13%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main disabledRow"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1;"
                >
                  Runtime Input
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main disabledRow"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Yes
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
      style="color: rgb(255, 123, 38);"
    >
      pipeline.artifactTriggerConfigPanel.chartVersionRuntimeInput
    </p>
    
  </div>
  <footer
    class="ModalDialog--footer"
    data-testid="modaldialog-footer"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        data-name="selectBtn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          select
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          cancel
        </span>
      </button>
    </div>
  </footer>
  <button
    aria-label="Close"
    class="bp3-button Button--button StyledProps--font StyledProps--main ModalDialog--closeButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-icon"
    type="button"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="Stroke"
    >
      <svg
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 .8l6 6 6-6-12 12 6-6 6 6"
          stroke="#8F90A6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;
